--- a/api/qsharp/Microsoft.Quantum.Diagnostics.yml
+++ b/api/qsharp/Microsoft.Quantum.Diagnostics.yml
@@ -1,6 +1,7 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.diagnostics
 name: Microsoft.Quantum.Diagnostics
+summary: " # <a name=\"summary\"></a>摘要\n 此命名空间包含可用于诊断目的的函数和操作，包括断言操作和声明函数。"
 functions:
 - uid: microsoft.quantum.diagnostics.allequalityfactb
   summary: 断言布尔值的两个数组相等。
@@ -35,6 +36,10 @@ functions:
 - uid: microsoft.quantum.diagnostics.nearequalityfactd
   summary: 断言传统浮点值的预期值为小公差 1e-10。
 operations:
+- uid: microsoft.quantum.diagnostics.allowatmostncallsca
+  summary: 在对此操作及其 adjoint 的调用之间，断言给定的操作最多可调用特定次数。
+- uid: microsoft.quantum.diagnostics.allowatmostnqubits
+  summary: 在对此操作及其 adjoint 的调用之间，将使用语句最多地断言给定数量的附加 qubits。
 - uid: microsoft.quantum.diagnostics.assertallzero
   summary: 断言给定的 qubits 都处于 $ \ket {0} $ 状态。
 - uid: microsoft.quantum.diagnostics.assertallzerowithintolerance
@@ -48,7 +53,7 @@ operations:
     假设有两个运算，则断言它们对于所有输入状态都是相同的。
 
 
-    此断言是通过以下方式实现的：检查所有状态的操作的操作： $V _0 \otimes ... \otimes V_ {n-1} $，其中 $V _k $ 是状态 $ \ket {0} $，$ \ket {1} $，$ \ket{+} $，$ \ket{i} $ （+ 1 Eigenstate Of Pauli Y 运算符）。
+    此断言是通过以下方式实现的：检查所有状态的操作的操作： $V _0 \otimes ... \otimes V_ {n-1} $，其中 $V _k $ 是状态 $ \ket {0} $，$ \ket $ {1} ，$ \ket{+} $，$ \ket{i} $ (+ 1 Eigenstate Of Pauli Y operator) 。
 
 
     此断言使用 $n $ qubits，需要对要比较的操作进行多次调用。
@@ -67,6 +72,8 @@ operations:
     因此，此操作只需对正在测试的每个操作进行一次调用，而需要分配两个要分配的 qubits。
 
     例如，可以使用这种断言来确保操作的优化版本与其简单的实现完全相同，或者对非量程输入进行操作的操作与已知情况有关。
+- uid: microsoft.quantum.diagnostics.assertphase
+  summary: 断言 superposition 状态相同的阶段具有预期值。
 - uid: microsoft.quantum.diagnostics.assertqubit
   summary: 断言 qubit `q` 位于 Pauli Z 运算符所需的 eigenstate 中。
 - uid: microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance
@@ -74,23 +81,24 @@ operations:
     断言处于预期状态的 qubit。
 
 
-    `expected`表示复杂向量，$ \ket{\psi} = \begin{bmatrix}a & b\end {bmatrix} ^ {\mathrm{T}} $。
+    `expected` 表示复杂向量，$ \ket{\psi} = \begin{bmatrix}a & b\end {bmatrix} ^ {\mathrm{T}} $。
 
     元组的第一个元素表示每个 $a $，$b $ 是复数的实部，第二个元素是复数的实部。
 
     最后一个参数定义进行断言的公差。
 - uid: microsoft.quantum.diagnostics.assertqubitwithintolerance
   summary: 断言 qubit `q` 位于 Pauli Z 运算符的预期 eigenstate 中，直到达到给定的容差。
+- uid: microsoft.quantum.diagnostics.dumpoperation
+  summary: 在给定操作的情况下，显示有关当前执行目标可用的操作的诊断。
 newtypes:
 - uid: microsoft.quantum.diagnostics.enabletestingvianame
   summary: 编译器可识别的属性，通过该属性可以定义可在加载类型时使用的可选名称，也可以将其用于测试目的。
 - uid: microsoft.quantum.diagnostics.test
   summary: 编译器可识别的属性，用于标记单元测试。
-summary: " # <a name=\"summary\"></a>总结\n 此命名空间包含可用于诊断目的的函数和操作，包括断言操作和声明函数。"
 metadata:
-  ms.openlocfilehash: c8e1cd7f3458e736a47749dd057174eb4961c31d
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 16c457188160a3e0d2b4d04b40af0dabbbdc0f0a
+  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85884578"
+  ms.lasthandoff: 08/25/2020
+  ms.locfileid: "88863053"
